tests/fixtures/invalid/float_mod_none.py
# Cannot modulo Float and None
x: float = 1.0 % None
